# pvs-finance-back

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  env-local  pyproject.toml  setup.cfg
.github/workflows/: checks.yml
accounts/: urls.py  views.py
app/app/: settings.py  tests.py  urls.py
app/core/: admin.py  models.py
app/core/migrations/: 0001_initial.py
app/core/tests/: test_admin.py  test_commands.py  test_models.py
back/: settings.py  urls.py
