[tool.black]
line-length = 120
target-version = ['py310']
exclude = '''
(
  /(
      \.git
    | \.venv
    | migrations
  )/
)
'''

[tool.poetry]
name = "pvs-finance-back"
version = "0.1.0"
description = "PVS Finance project - backend"
authors = ["Pau Vilella <pau.vilella.st@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
black = "^22.10.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
